crates/relune-cli/tests/snapshots/integration_tests__render_broken_sql.snap
---
source: crates/relune-cli/tests/integration_tests.rs
expression: format!("exit_code: {exit_code}\nstderr:\n{stderr}")
---
exit_code: 1
stderr:
Error: Failed to render schema
