crates/relune-cli/tests/snapshots/integration_tests__render_missing_input.snap
---
source: crates/relune-cli/tests/integration_tests.rs
expression: "format!(\"exit_code: {exit_code}\\nstderr:\\n{stderr}\")"
---
exit_code: 2
stderr:
Error: No input source was provided. Provide an input (e.g. --sql or --db-url) or set the DATABASE_URL environment variable.
