crates/relune-cli/tests/snapshots/integration_tests__render_nonexistent_file.snap
---
source: crates/relune-cli/tests/integration_tests.rs
assertion_line: 45
expression: "format!(\"exit_code: {exit_code}\\nstderr:\\n{stderr}\")"
---
exit_code: 2
stderr:
Error: Failed to read SQL file: /nonexistent/path/file.sql: No such file or directory (os error 2)
